<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.trading</groupId>
    <artifactId>CombinedOrderingSystem</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>CombinedOrderingSystem</name>
    <description>Multi-module Parent Pom for Order Processing and Management Services</description>

    <properties>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>libs/shared-models</module>
        <module>ms/order-processing-service</module>
        <module>ms/order-management-service</module>
    </modules>
</project>
